ordering api contract model and endpoints asc regarding tags
