# src/main/java/hu/pannonuni/routerangers/entity/address/Address.java
@@ -1,7 +1,10 @@
 package hu.pannonuni.routerangers.entity.address;
 
 import hu.pannonuni.routerangers.entity.base.Identifier;
+import hu.pannonuni.routerangers.value.StreetType;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -17,6 +20,8 @@ import lombok.Setter;
 public class Address extends Identifier {
 
     private String street;
+    @Enumerated(EnumType.STRING)
+    private StreetType streetType;
     private String houseNumber;
     private String city;
     private String postalCode;
