# src/main/resources/api-contract.yaml
@@ -21,61 +21,6 @@ tags:
     description: Address management
 
 paths:
-  /welcome:
-    get:
-      summary: Welcome message
-      operationId: welcomeMessage
-      tags:
-        - welcome
-      responses:
-        '200':
-          description: A welcome message
-          content:
-            application/json:
-              schema:
-                type: string
-                example: "Welcome to Route Rangers API"
-
-  /auth/users:
-    x-ignore: true
-    get:
-      summary: Render all users
-      operationId: renderAllUsers
-      x-interface-name: UserApi
-      tags:
-        - user
-      responses:
-        '200':
-          description: A list of users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserModel'
-
-    post:
-      x-interface-name: UserApi
-      summary: Create a new user
-      operationId: createUser
-      tags:
-        - user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserRegistrationModel'
-      responses:
-        '201':
-          description: User created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserModel'
-        '405':
-          description: Invalid input
-
   /auth/address:
     get:
       summary: Get all addresses
@@ -161,36 +106,63 @@ paths:
         '405':
           description: Validation exception
 
+  /auth/users:
+    x-ignore: true
+    get:
+      summary: Render all users
+      operationId: renderAllUsers
+      x-interface-name: UserApi
+      tags:
+        - user
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserModel'
+
+    post:
+      x-interface-name: UserApi
+      summary: Create a new user
+      operationId: createUser
+      tags:
+        - user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRegistrationModel'
+      responses:
+        '201':
+          description: User created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserModel'
+        '404':
+          description: Bad request
+
+  /welcome:
+    get:
+      summary: Welcome message
+      operationId: welcomeMessage
+      tags:
+        - welcome
+      responses:
+        '200':
+          description: A welcome message
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Welcome to Route Rangers API"
+
 components:
   schemas:
-    UserRegistrationModel:
-      type: object
-      properties:
-        email:
-          type: string
-          format: email
-          example: csabavadasz79@gmail.com
-        password:
-          type: string
-          example: "password"
-        repeatPassword:
-          type: string
-          example: "password"
-      required:
-        - email
-        - password
-        - repeatPassword
-    UserModel:
-      type: object
-      properties:
-        id:
-          type: string
-          format: uuid
-          example: "123e4567-e89b-12d3-a456-426614174000"
-        email:
-          type: string
-          format: email
-          example: johndoe@example.com
     AddressModel:
       type: object
       properties:
@@ -221,6 +193,7 @@ components:
           type: number
           format: double
           description: Longitude of the address.
+
     AddressCreateModel:
       type: object
       properties:
@@ -239,3 +212,76 @@ components:
         country:
           type: string
           description: Country of the address.
+        streetType:
+          $ref: '#/components/schemas/StreetTypeModel'
+        otherStreetType:
+          type: string
+          description: Please specify if 'other' is selected.
+          nullable: true
+
+    StreetTypeModel:
+      type: string
+      enum:
+        - ROAD
+        - STREET
+        - SQUARE
+        - AVENUE
+        - BOULEVARD
+        - MAIN_SQUARE
+        - PROMENADE
+        - ROW
+        - BANK
+        - GARDEN
+        - ALLEY
+        - PUBLIC_PLACE
+        - DRAIN
+        - CIRCLE
+        - BLOCK
+        - FARM
+        - PLOT
+        - VILLAGE_END
+        - OUTER
+        - BRIDGE
+        - PATH
+        - CITY
+        - CENTER
+        - GREENERY
+        - RESORT
+        - NICH
+        - STOP
+        - DOG_PARK
+        - UNDERPASS
+        - OVERPASS
+        - TRAFFIC_PATH
+        - SELF_SUPPLY
+        - OTHER
+
+    UserRegistrationModel:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          example: csabavadasz79@gmail.com
+        password:
+          type: string
+          example: "password"
+        repeatPassword:
+          type: string
+          example: "password"
+      required:
+        - email
+        - password
+        - repeatPassword
+
+    UserModel:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: "123e4567-e89b-12d3-a456-426614174000"
+        email:
+          type: string
+          format: email
+          example: johndoe@example.com
